--- a/22ML_hw3/ml_hw3.ipynb
+++ b/22ML_hw3/ml_hw3.ipynb
@@ -343,12 +343,12 @@
     "    \"\"\"\n",
     "    ###########################\n",
     "    # Insert your code here.\n",
-    "    # grad_x = ...\n",
-    "    # grad_w = ...\n",
-    "    # grad_b = ...\n",
-    "    # return grad_x, grad_w, grad_b\n",
+    "    grad_x = grad_y @ w.T\n",
+    "    grad_w = x.T @ grad_y\n",
+    "    grad_b = np.ones(len(grad_y)).T @ grad_y\n",
+    "    return grad_x, grad_w, grad_b\n",
     "    ###########################\n",
-    "    raise Exception('Not implemented')"
+    "    #raise Exception('Not implemented')"
    ]
   },
   {
@@ -365,10 +365,11 @@
     "    \"\"\"\n",
     "    ###########################\n",
     "    # Insert your code here.\n",
-    "    # grad_x = ...\n",
-    "    # return grad_x\n",
+    "    y = (y>0).astype(int)\n",
+    "    grad_x = y * grad_y\n",
+    "    return grad_x\n",
     "    ###########################\n",
-    "    raise Exception('Not implemented')"
+    "    #raise Exception('Not implemented')"
    ]
   },
   {
@@ -416,14 +417,29 @@
     "    ###########################\n",
     "    # Insert your code here.\n",
     "    # Update the weights.\n",
-    "    # model['W1'] = ...\n",
-    "    # model['W2'] = ...\n",
-    "    # model['W3'] = ...\n",
-    "    # model['b1'] = ...\n",
-    "    # model['b2'] = ...\n",
-    "    # model['b3'] = ...\n",
+    "    if len(model) == 12:\n",
+    "      model['dE_dW1_v'] = 0.\n",
+    "      model['dE_dW2_v'] = 0.\n",
+    "      model['dE_dW3_v'] = 0.\n",
+    "      model['dE_db1_v'] = 0.\n",
+    "      model['dE_db2_v'] = 0.\n",
+    "      model['dE_db3_v'] = 0.\n",
+    "        \n",
+    "    model['dE_dW1_v'] = momentum * model['dE_dW1_v'] - eps * model['dE_dW1']\n",
+    "    model['dE_dW2_v'] = momentum * model['dE_dW2_v'] - eps * model['dE_dW2']\n",
+    "    model['dE_dW3_v'] = momentum * model['dE_dW3_v'] - eps * model['dE_dW3']\n",
+    "    model['dE_db1_v'] = momentum * model['dE_db1_v'] - eps * model['dE_db1']\n",
+    "    model['dE_db2_v'] = momentum * model['dE_db2_v'] - eps * model['dE_db2']\n",
+    "    model['dE_db3_v'] = momentum * model['dE_db3_v'] - eps * model['dE_db3']\n",
+    "\n",
+    "    model['W1'] = model['W1'] + model['dE_dW1_v']\n",
+    "    model['W2'] = model['W2'] + model['dE_dW2_v']\n",
+    "    model['W3'] = model['W3'] + model['dE_dW3_v']\n",
+    "    model['b1'] = model['b1'] + model['dE_db1_v']\n",
+    "    model['b2'] = model['b2'] + model['dE_db2_v']\n",
+    "    model['b3'] = model['b3'] + model['dE_db3_v']\n",
     "    ###########################\n",
-    "    raise Exception('Not implemented')"
+    "    #raise Exception('Not implemented')"
    ]
   },
   {
@@ -675,8 +691,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -688,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6 (default, Sep 26 2022, 11:37:49) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "vscode": {
    "interpreter": {
